# pdm-docs-zh

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/assets/: extra.css  extra.js
docs/dev/: benchmark.md  write.md
docs/reference/: cli.md  configuration.md  pep621.md
docs/usage/: advanced.md  config.md  dependency.md  hooks.md  lock-targets.md  lockfile.md  pep582.md  project.md  publish.md  scripts.md  template.md  uv.md  venv.md
locale/zh-CN/LC_MESSAGES/: cli.mo  cli.po
